[package]
name = "sqlite-http"
version = "0.1.0"
edition = "2021"
description = "An HTTP interface for SQLite."
license = "MIT"

[profile.release]
lto = true

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled", "serde_json"] }
warp = "0.3.6"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.2"
